About me section updated

--- a/index.html
+++ b/index.html
@@ -3,32 +3,35 @@
 <head>
 <meta charset="UTF-8">
 <title>Untitled Document</title>
-<link rel="stylesheet" type="text/css" href="Coen.css">
+<link rel="stylesheet" type="text/css" href="index.css">
 	<link rel="stylesheet" type="text/css" href="unv.css">
 	<link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
 </head>
 <nav id="navigation">
-  <a href="#" class="logo">RYANCOEN.DEV</a>
+  <a href="index.html" class="logo">RYANCOEN.DEV</a>
   <ul class="links">
-    <li class="dropdown"><a href="#" class="trigger-drop">Projects</i></a>
+    <li class="dropdown"><a href="directory.html" class="trigger-drop">Projects</a>
       <ul class="drop">
         <li><a href="#">Code</a></li>
         <li><a href="#">Gaming</a></li>
         <li><a href="#">Apple</a></li>
-        <li><a href="#">All</a></li>
+		  <li><a href="#">Tech Support/FAQ</a></li>
+		  <li><a href="#">Reviews</a></li>
+        <li><a href="directory.html">All</a></li>
       </ul>
     </li>
-    <li class="dropdown"><a href="music.html" class="trigger-drop">Music</i></a>
+    <li class="dropdown"><a href="music.html" class="trigger-drop">Music</a>
 <li><a href="#">About</a></li>
     </li>
   </ul>
 </nav>
-<img src="logo.png" href="coen.html" width="135" height="135" id="logopic" alt=""/>
+<a href="index.html"> <img src="logo.png"  width="135" height="135" id="logopic" alt=""/></a>
 <body>
+	<br><br><br>
 <div id="welcomebox">
 		<img src="mac1.png" width="421" height="421" id="profile" alt="" align="center"/>
 <h1 align="center">Welcome To<br>RyanCoen.dev</h1>
-		<p id="intro" align="center">A place for my projects, music, tutorials and all things that interest me. Everything you find here has been built from scratch, including this site. Check out my portfolio for the latest projects i'm working on.&nbsp; &nbsp; &nbsp; </p>
+		<p id="intro" align="center">A place for my projects, music, tutorials and all things that interest me. Everything you find here has been built from scratch, including this site. Check out my portfolio for the latest projects I'm working on.&nbsp; &nbsp; &nbsp; </p>
 	</div>
 	<div id="footer">
 	<div id="social" align="center">
