--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </ul>
     </li>
     <li class="dropdown"><a href="music.html" class="trigger-drop">Music</a>
-    <li><a href="#">About</a></li>
+    <li><a href="about.html">About</a></li>
     </li>
   </ul>
 </nav>
