--- a/about.html
+++ b/about.html
@@ -33,12 +33,16 @@
 		<div id="para">
 			<h1>Ryan Coen</h1>
 			<h4>Web Designer | Musician | Apple Fan-boy</h4>
-		<p>Hey there! My name is Ryan Coen, an aspiring front-end web developer based out of Milwaukee, WI. Technology, music, and design are my passions and I am always up for collaborating with good people. I usually spend my time learning something new or trying to create something truly unique and useful. </p><p>Outside of my personal interest, I have years of expereince in client facing leadership and technical support for a wide variety of products. </p><p>Take a look at my portfolio, maybe learn a thing or two, or just say "Hi!". Mac and I would love to hear from you.  </p>
+		<p>Hey there! My name is Ryan Coen, an aspiring web developer based out of Milwaukee, WI. Technology, music, and design are my passions, right behind Apple and Kingdom Hearts. I usually spend my time learning something new or trying to create something truly unique and useful. </p><p>Outside of my personal interest, I have years of expereince in client facing leadership and technical support. </p><p>Take a look at my portfolio, maybe learn a thing or two, or just say "Hi!". Mac and I would love to hear from you.  </p>
 	</div></div>
 	</div>
 	<div id="container2">
 		<div id="barz">
 	<section class="bar-graph bar-graph-horizontal bar-graph-one">
+		<div class="bar-zero">
+    <span class="year">Leadership</span>
+    <div class="bar" data-percentage="5+ years"></div>
+  </div>
   <div class="bar-one">
     <span class="year">HTML/CSS</span>
     <div class="bar" data-percentage="3+ years"></div>
@@ -52,7 +56,7 @@
     <div class="bar" data-percentage="1+ year"></div>
   </div>
   <div class="bar-four">
-    <span class="year">JavaScript</span>
+    <span class="year">React.js</span>
     <div class="bar" data-percentage="1+ year"></div>
   </div>
 		 <div class="bar-five">
