--- a/HTML/khswitch.html
+++ b/HTML/khswitch.html
@@ -7,15 +7,11 @@
 <link rel="stylesheet" type="text/css" href="../CSS/unv.css">
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
 </head>
-<nav id="navigation"><a href="../HTML/index.html" class="logo">RYANCOEN.DEV</a>
+<nav id="navigation"><a href="../index.html" class="logo">RYANCOEN.DEV</a>
   <ul class="links">
     <li class="dropdown"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
       <ul class="drop">
-        <li><a href="#">Code</a></li>
-        <li><a href="#">Gaming</a></li>
-        <li><a href="#">Apple</a></li>
-        <li><a href="#">Tech Support/FAQ</a></li>
-        <li><a href="#">Reviews</a></li>
+        <li><a href="#">Github</a></li>
         <li><a href="../HTML/directory.html">All</a></li>
       </ul>
     </li>
@@ -24,7 +20,7 @@
     </li>
   </ul>
 </nav>
-<a href="../HTML/index.html"><img src="../Images/logo.png"  width="135" height="135" id="logopic" alt=""/></a>
+<a href="../index.html"><img src="../Images/logo.png"  width="135" height="135" id="logopic" alt=""/></a>
 <body>
 	<div id="container">
 	<img src="../Images/IMG_4454.JPG" id="topimage">
@@ -35,8 +31,8 @@
 		<img src="../Images/key.png" id="key">
 	</div>
 	<div id="footer">
-  <div id="social" align="center"> <img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/reddit.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/stackoverflow.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/instagram.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
-  <p align="center">Ryan Coen - 2020</p>
+  <div id="social" align="center"> <img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/>  <img src="../Images/stackoverflow.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
+  <h5 align="center">Ryan Coen - 2020</h5>
 </div>
 </body>
 </html>
