--- a/HTML/music.html
+++ b/HTML/music.html
@@ -8,15 +8,11 @@
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
 <script type="text/javascript" src="../Javascript/music.js" defer></script>
 </head>
-<nav id="navigation"><a href="../HTML/index.html" class="logo">RYANCOEN.DEV</a>
+<nav id="navigation"><a href="../index.html" class="logo">RYANCOEN.DEV</a>
   <ul class="links">
     <li class="dropdown"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
       <ul class="drop">
-        <li><a href="#">Code</a></li>
-        <li><a href="#">Gaming</a></li>
-        <li><a href="#">Apple</a></li>
-        <li><a href="#">Tech Support/FAQ</a></li>
-        <li><a href="#">Reviews</a></li>
+        <li><a href="#">Github</a></li>
         <li><a href="../HTML/directory.html">All</a></li>
       </ul>
     </li>
@@ -25,12 +21,12 @@
     </li>
   </ul>
 </nav>
-<a href="../HTML/index.html"><img src="../Images/logo.png"  width="135" height="135" id="logopic" alt=""/></a>
+<a href="../index.html"><img src="../Images/logo.png"  width="135" height="135" id="logopic" alt=""/></a>
 <body>
 <h1 align="center">Coming Soon</h1>
 <div id="footer">
   <div id="social" align="center"> <img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/stackoverflow.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
-  <p align="center">Ryan Coen - 2020</p>
+  <h5 align="center">Ryan Coen - 2020</h5>
 </div>
 </body>
 </html>
