--- a/HTML/raspberrytimemachine.html
+++ b/HTML/raspberrytimemachine.html
@@ -3,38 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <title>Untitled Document</title>
-<link rel="stylesheet" type="text/css" href="raspberrytimemachine.css">
-<link rel="stylesheet" type="text/css" href="unv.css">
+<link rel="stylesheet" type="text/css" href="../CSS/raspberrytimemachine.css">
+<link rel="stylesheet" type="text/css" href="../CSS/unv.css">
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
 </head>
-<nav id="navigation"><a href="index.html" class="logo">RYANCOEN.DEV</a>
+<nav id="navigation"><a href="../index.html" class="logo">RYANCOEN.DEV</a>
   <ul class="links">
-    <li class="dropdown"><a href="directory.html" class="trigger-drop">Projects</a>
+    <li class="dropdown"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
       <ul class="drop">
-        <li><a href="#">Code</a></li>
-        <li><a href="#">Gaming</a></li>
-        <li><a href="#">Apple</a></li>
-		  <li><a href="#">Tech Support/FAQ</a></li>
-		  <li><a href="#">Reviews</a></li>
-        <li><a href="directory.html">All</a></li>
+        <li><a href="#">Github</a></li>
+        <li><a href="../HTML/directory.html">All</a></li>
       </ul>
     </li>
-    <li class="dropdown"><a href="music.html" class="trigger-drop">Music</a>
-    <li><a href="#">About</a></li>
+    <li class="dropdown"><a href="../HTML/music.html" class="trigger-drop">Music</a>
+    <li><a href="../HTML/about.html">About</a></li>
     </li>
   </ul>
 </nav>
-<a href="index.html"> <img src="logo.png"  width="135" height="135" id="logopic" alt=""/></a>
+<a href="../index.html"> <img src="../Images/logo.png"  width="135" height="135" id="logopic" alt=""/></a>
 <body>
-<div id="parent"> <img class="banner" src="piBKGND.jpg"  alt=""/> <img id="topimage" src="unibody-time-machine.png"  alt=""/> </div>
+<div id="parent"> <img class="banner" src="../Images/piBKGND.jpg"  alt=""/> <img id="topimage" src="../Images/unibody-time-machine.png"  alt=""/> </div>
 <div id="article">
-  <h3 align="">Quad SATA Hat + Raspberry Pi NAS/Time Machine [Guide]</h3>
+  <h2>Quad SATA Hat + Raspberry Pi NAS/Time Machine [Guide]</h2>
   <h5>Updated: 08/06/2020</h5>
-  <p>This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.This is some text.</p>
+  <h3>Intro:</h3>
+	<h3>The Hardware</h3>
+	<h3>Installing Linux</h3>
+	<h3>Installing Drivers/Firmware</h3>
+	<h3>Configure Open Media Vault</h3>
 </div>
 <div id="footer">
-  <div id="social" align="center"> <img src="youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="linkedin.png" class="socialfooter" width="60" height="60" alt=""/> <img src="reddit.png" class="socialfooter" width="60" height="60" alt=""/> <img src="stackoverflow.png" class="socialfooter" width="60" height="60" alt=""/> <img src="instagram.png" class="socialfooter" width="60" height="60" alt=""/> <img src="github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
-  <p align="center">Ryan Coen - 2020</p>
+  <div id="social" align="center"> <img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/>  <img src="../Images/stackoverflow.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
+  <h5 align="center">Ryan Coen - 2020</h5>
 </div>
 </body>
 </html>
