Began Responsive Design
See about and Index

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -9,31 +9,37 @@
 </head>
 <nav id="navigation"><a href="../index.html" class="logo">RYANCOEN.DEV</a>
   <ul class="links">
-    <li class="dropdown"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
+    <li class="dropdown" id="main1"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
       <ul class="drop">
         <li><a href="#">Github</a></li>
         <li><a href="../HTML/directory.html">All</a></li>
       </ul>
     </li>
-    <li class="dropdown"><a href="../HTML/music.html" class="trigger-drop">Music</a>
-    <li><a href="../HTML/about.html">About</a></li>
+    <li id="main2"><a href="../HTML/music.html">Music</a></li>
+    <li id="main3"><a href="../HTML/about.html">About</a></li>
+	  <li class="dropdown" id="main4"><a href="../HTML/directory.html" class="trigger-drop">Menu</a>
+      <ul class="drop">
+        <li><a href="#">Github</a></li>
+		  <li><a href="#">Music</a></li>
+		  <li><a href="#">About</a></li>
+        <li><a href="../HTML/directory.html">Projects</a></li>
+      </ul>
     </li>
   </ul>
 </nav>
 <a href="../index.html"><img src="../Images/logo.png"  width="135" height="135" id="logopic" alt=""/></a>
 <body>
 <div id="container">
-  <div id="topprof">
-    <div><img src="../Images/IMG_4589.jpeg" id="profilepic"></div>
+  <div id="topprof"> <img src="../Images/IMG_4589.jpeg" id="profilepic">
     <div id="para">
       <h1>Ryan Coen</h1>
       <h4>Web Designer | Musician | Apple Fan-boy</h4>
-      <p>Hey there! My name is Ryan Coen, an aspiring web developer based out of Milwaukee, WI. Technology, music, and design are my passions, right behind Apple and Kingdom Hearts. I usually spend my time learning something new or trying to create something truly unique and useful. </p>
-      <p>Outside of my personal interest, I have years of expereince in client facing leadership and technical support. </p>
-      <p>Take a look at my portfolio, maybe learn a thing or two, or just say "Hi!". Mac and I would love to hear from you. </p>
+      <p>Hey there! My name is Ryan Coen, a front-end web developer based out of Milwaukee, WI. Technology, music, and design are my passions and I usually spend my time learning something new or trying to create something truly unique and useful. 
+        I have years of expereince in client facing leadership and technical support.<br>
+        Take a look at my portfolio, maybe learn a thing or two, or just say "Hi!". Mac and I would love to hear from you. </p>
     </div>
   </div>
-	<a href="https://www.icloud.com/iclouddrive/0rUN1_7jEtkfRyJj_Wk5xOWpQ#RyanCoenResume" class="button">Download Resume</a><br>
+  <a href="https://www.icloud.com/iclouddrive/0rUN1_7jEtkfRyJj_Wk5xOWpQ#RyanCoenResume" class="button">Download Resume</a><br>
 </div>
 <div id="container2">
   <div id="barz">
@@ -66,7 +72,7 @@
   </div>
 </div>
 <div id="footer">
-  <div id="social" align="center"> <img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/>  <img src="../Images/stackoverflow.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
+  <div id="social" align="center"> <img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
   <h5 align="center">Ryan Coen - 2020</h5>
 </div>
 </body>
