--- a/HTML/All-In-One-Mac-Recovery.html
+++ b/HTML/All-In-One-Mac-Recovery.html
@@ -73,7 +73,7 @@
   <div class="disclaimer">If you choose to make a bootable version of MacOS (PE), depending on your choice of OS and the computer you're working on, you may not be able to boot. For example: your PE is Catalina based, you may not be able to boot on a computer that does not support Catalina.</div>
 </div>
 <div id="footer">
-  <div id="social" align="center"> <img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/>  <img src="../Images/stackoverflow.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
+  <div id="social" align="center"> <img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
   <h5 align="center">Ryan Coen - 2020</h5>
 </div>
 </body>
