--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
 </head>
 <nav id="navigation"><a href="../index.html" class="logo">RYANCOEN.DEV</a>
   <ul class="links">
-    <li class="dropdown"><a href="./HTML/directory.html" class="trigger-drop">Projects</a>
+    <li class="dropdown" id="main1"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
       <ul class="drop">
         <li><a href="#">Github</a></li>
         <li><a href="./HTML/directory.html">All</a></li>
       </ul>
     </li>
-    <li class="dropdown"><a href="./HTML/music.html" class="trigger-drop">Music</a>
-    <li><a href="./HTML/about.html">About</a></li>
+    <li id="main2"><a href="./HTML/music.html">Music</a></li>
+    <li id="main3"><a href="./HTML/about.html">About</a></li>
+	  <li class="dropdown" id="main4"><a href="./HTML/directory.html" class="trigger-drop">Menu</a>
+      <ul class="drop">
+        <li><a href="#">Github</a></li>
+		  <li><a href="./HTML/music.html">Music</a></li>
+		  <li><a href="./HTML/about.html">About</a></li>
+        <li><a href="../HTML/directory.html">Projects</a></li>
+      </ul>
     </li>
   </ul>
 </nav>
@@ -25,13 +32,12 @@
 <br>
 <br>
 <br>
-<div id="welcomebox"> <img src="./Images/mac1.png" width="421" height="421" id="profile" alt=""/>
+<img src="./Images/mac1.png" id="profile" alt=""/>
   <h1 align="center">Welcome To<br>
     RyanCoen.dev</h1>
   <p id="intro" align="center">A place for my projects, music, tutorials and all things that interest me. Everything you find here has been built from scratch, including this site. Check out my portfolio for the latest projects I'm working on.&nbsp; &nbsp; &nbsp; </p>
-</div>
 <div id="footer">
-  <div id="social" align="center"> <img src="./Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="./Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/>  <img src="./Images/stackoverflow.png" class="socialfooter" width="60" height="60" alt=""/> <img src="./Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
+  <div id="social" align="center"> <img src="./Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="./Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> <img src="./Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
   <h5 align="center">Ryan Coen - 2020</h5>
 </div>
 </body>
