--- a/HTML/about.html
+++ b/HTML/about.html
@@ -11,17 +11,17 @@
   <ul class="links">
     <li class="dropdown" id="main1"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
       <ul class="drop">
-        <li><a href="#">Github</a></li>
-        <li><a href="../HTML/directory.html">All</a></li>
+        <li><a href="https://github.com/ryancoen">Github</a></li>
+        <li><a href="./HTML/directory.html">All</a></li>
       </ul>
     </li>
-    <li id="main2"><a href="../HTML/music.html">Music</a></li>
-    <li id="main3"><a href="../HTML/about.html">About</a></li>
-	  <li class="dropdown" id="main4"><a href="../HTML/directory.html" class="trigger-drop">Menu</a>
+    <li id="main2"><a href="./HTML/music.html">Music</a></li>
+    <li id="main3"><a href="./HTML/about.html">About</a></li>
+	  <li class="dropdown" id="main4"><a href="./HTML/directory.html" class="trigger-drop">Menu</a>
       <ul class="drop">
         <li><a href="#">Github</a></li>
-		  <li><a href="#">Music</a></li>
-		  <li><a href="#">About</a></li>
+		  <li><a href="./HTML/music.html">Music</a></li>
+		  <li><a href="./HTML/about.html">About</a></li>
         <li><a href="../HTML/directory.html">Projects</a></li>
       </ul>
     </li>
