--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <ul class="links">
     <li class="dropdown" id="main1"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
       <ul class="drop">
-        <li><a href="#">Github</a></li>
+        <li><a href="https://github.com/ryancoen">Github</a></li>
         <li><a href="./HTML/directory.html">All</a></li>
       </ul>
     </li>
