--- a/HTML/directory.html
+++ b/HTML/directory.html
@@ -27,8 +27,9 @@
   <div id="divider"></div>
   <h3>2020</h3>
   <ul class="projects">
-    <li><a class="link2" href="../HTML/raspberrytimemachine.html">Quad SATA Hat + Raspberry Pi NAS/Time Machine [Guide]</a></li>
-    <li><a class="link2" href="../HTML/All-In-One-Mac-Recovery.html">ALL-IN-ONE macOS/OS X Recovery Drive [Guide]</a></li>
+	  <li><a class="link2" href="../HTML/calc.html">JavaScript Calculator - macOS </a></li>
+    <li><a class="link2" href="../HTML/raspberrytimemachine.html">Raspberry Pi Time Machine [Guide]</a></li>
+    <li><a class="link2" href="../HTML/All-In-One-Mac-Recovery.html">All-in-one macOS/OS X Recovery Drive [Guide]</a></li>
     <li><a class="link2" href="">Mac Pro 2008 A1222 El Capitan Upgrade [Guide]</a></li>
     <li><a class="link2" href="../HTML/Intel.html">Intel NUC DC3217BY Hackintosh with Catalina [Guide]</a></li>
     <li><a class="link2" href=""></a>Wii U Homebrew</li>
