--- a/HTML/directory.html
+++ b/HTML/directory.html
@@ -9,14 +9,21 @@
 </head>
 <nav id="navigation"><a href="../index.html" class="logo">RYANCOEN.DEV</a>
   <ul class="links">
-    <li class="dropdown"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
+    <li class="dropdown" id="main1"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
       <ul class="drop">
-        <li><a href="#">Github</a></li>
-        <li><a href="../HTML/directory.html">All</a></li>
+        <li><a href="https://github.com/ryancoen">Github</a></li>
+        <li><a href="./HTML/directory.html">All</a></li>
       </ul>
     </li>
-    <li class="dropdown"><a href="../HTML/music.html" class="trigger-drop">Music</a>
-    <li><a href="../HTML/about.html">About</a></li>
+    <li id="main2"><a href="./HTML/music.html">Music</a></li>
+    <li id="main3"><a href="./HTML/about.html">About</a></li>
+	  <li class="dropdown" id="main4"><a href="./HTML/directory.html" class="trigger-drop">Menu</a>
+      <ul class="drop">
+        <li><a href="#">Github</a></li>
+		  <li><a href="./HTML/music.html">Music</a></li>
+		  <li><a href="./HTML/about.html">About</a></li>
+        <li><a href="../HTML/directory.html">Projects</a></li>
+      </ul>
     </li>
   </ul>
 </nav>
@@ -27,7 +34,7 @@
   <div id="divider"></div>
   <h3>2020</h3>
   <ul class="projects">
-	  <li><a class="link2" href="../HTML/calc.html">JavaScript Calculator - macOS </a></li>
+	  <li><a class="link2" href="../HTML/macOS_calculator.html">JavaScript Calculator - macOS </a></li>
     <li><a class="link2" href="../HTML/raspberrytimemachine.html">Raspberry Pi Time Machine [Guide]</a></li>
     <li><a class="link2" href="../HTML/All-In-One-Mac-Recovery.html">All-in-one macOS/OS X Recovery Drive [Guide]</a></li>
     <li><a class="link2" href="">Mac Pro 2008 A1222 El Capitan Upgrade [Guide]</a></li>
